--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
-# local package
--e .
-
-# external requirements
-click
-Sphinx
-coverage
-awscli
-flake8
-python-dotenv>=0.5.1
+Cython
+numpy==1.16.2 
+scipy==1.2.1 
+pandas==0.24.2
+scikit-learn==0.21.2
+xgboost==0.81
+lightgbm==2.2.2
+tensorflow==1.14.0
+keras==2.2.4
+hyperopt==0.1.1
+bhtsne==0.1.9
+rgf_python==3.4.0
+umap-learn==0.3.9
